[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.2",
    "setuptools_scm",
]

[project]
authors = [{name = "Common Partial Wave Analysis", email = "compwa-admin@ep1.rub.de"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "PyYAML >=5.1", # https://stackoverflow.com/a/55171433
    "attrs >=20.1.0", # https://www.attrs.org/en/stable/api.html#next-gen
    "iminuit >=2.0",
    "numpy",
    "sympy >=1.9", # lambdify cse
    "tqdm >=4.24.0", # autonotebook
]
description = "Python fitter package for multiple computational back-ends"
dynamic = ["version"]
keywords = [
    "HEP",
    "PWA",
    "amplitude analysis",
    "partial wave analysis",
    "particle physics",
    "physics",
    "tensorflow",
]
license = {file = "LICENSE"}
maintainers = [{email = "compwa-admin@ep1.rub.de"}]
name = "tensorwaves"
requires-python = ">=3.10"

[project.optional-dependencies]
jax = [
    "jax",
    "jaxlib",
]
numba = ["numba"]
phsp = [
    "phasespace[tf] >=1.7.0",
    "tensorwaves[tf]",
]
pwa = [
    "ampform[viz]>=0.12.0",
    "tensorwaves[phsp]",
]
scipy = ["scipy >=1"]
tf = ["tensorflow >=2.12"]

[project.readme]
content-type = "text/markdown"
file = "README.md"

[project.urls]
Changelog = "https://github.com/ComPWA/tensorwaves/releases"
Documentation = "https://tensorwaves.rtfd.io"
Source = "https://github.com/ComPWA/tensorwaves"
Tracker = "https://github.com/ComPWA/tensorwaves/issues"

[dependency-groups]
dev = [
    "ruff",
    {include-group = "doc"},
    {include-group = "jupyter"},
    {include-group = "style"},
    {include-group = "test"},
]
doc = [
    "myst-nb",
    "sphinx",
    "sphinx-api-relink",
    "sphinx-book-theme",
    "sphinx-codeautolink[ipython]",
    "sphinx-comments",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-thebe",
    "sphinx-togglebutton",
    "sphobjinv",
    {include-group = "notebooks"},
]
jupyter = [
    "jupyter-ruff",
    "jupyterlab",
    "jupyterlab-git",
    "jupyterlab-lsp",
    "jupyterlab-myst",
    "jupyterlab-quickopen",
    "python-lsp-ruff",
    "python-lsp-server",
    {include-group = "notebooks"},
]
notebooks = [
    "black",
    "ipympl",
    "matplotlib",
    "pandas",
    "tensorwaves[jax,pwa]",
]
style = [
    "ty",
    {include-group = "notebooks"},
    {include-group = "types"},
]
test = [
    "pyarrow",
    "pytest-benchmark",
    "pytest-cov",
    {include-group = "test-types"},
]
test-types = [
    "ipython", # test _repr_pretty_
    "pytest",
    "pytest-mock",
]
types = [
    "numba",
    "sphinx-api-relink",
    "tensorwaves[jax,pwa]",
    "types-PyYAML",
    "types-requests",
    "types-tensorflow",
    "types-tqdm",
    {include-group = "test-types"},
]

[tool.setuptools]
include-package-data = false
package-dir = {"" = "src"}

[tool.setuptools.package-data]
tensorwaves = ["py.typed"]

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]

[tool.setuptools_scm]
write_to = "src/tensorwaves/version.py"

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
branch = true
omit = [
    "benchmarks/**/*.py",
    "docs/**/*.ipynb",
    "docs/**/*.py",
    "examples/**/*.py",
    "tests/**/*.py",
]
source = ["src"]

[tool.poe.executor]
isolated = true
no-group = "dev"
type = "uv"

[tool.poe.tasks.all]
help = "Run all continuous integration (CI) tasks locally"
ignore_fail = "return_non_zero"
sequence = [
    "benchmark",
    "cov",
    "docnb-force",
    "linkcheck",
    "style",
    "test-all",
]

[tool.poe.tasks.benchmark]
cmd = """
pytest benchmarks \
    --benchmark-autosave \
    --benchmark-json benchmarks/output.json \
    --durations=0 \
    -k benchmark
"""
executor = {extra = ["jax", "numba", "pwa"], group = "test"}
help = "Run benchmark tests and visualize performance"

[tool.poe.tasks.cov]
cmd = """
pytest \
    --cov=tensorwaves \
    --cov-fail-under=85 \
    --cov-report=html \
    --cov-report=xml \
    ${paths}
"""
executor = {extra = ["jax", "numba", "pwa"], group = "test"}
help = "Compute how much of the source code is covered by tests"

[[tool.poe.tasks.cov.args]]
default = ""
multiple = true
name = "paths"
positional = true

[tool.poe.tasks.doc]
cmd = """
sphinx-build \
    --builder=html \
    --fail-on-warning \
    --keep-going \
    --show-traceback \
    docs/ \
    docs/_build/html/
"""
env = {PYTHONWARNINGS = ""}
executor = {group = "doc"}
help = "Build documentation and API"

[tool.poe.tasks.doclive]
cmd = """
sphinx-autobuild \
    --builder=html \
    --port=0 \
    --re-ignore=/__pycache__(/.*)?$ \
    --re-ignore=/_build(/.*)?$ \
    --re-ignore=/_images(/.*)?$ \
    --re-ignore=/\\.cache(/.*)?$ \
    --re-ignore=/\\.egg-info(/.*)?$ \
    --re-ignore=/\\.ipynb_checkpoints(/.*)?$ \
    --re-ignore=/\\.venv(/.*)?$ \
    --re-ignore=/\\.virtual_documents(/.*)?$ \
    --re-ignore=/api(/.*)?$ \
    --re-ignore=/docs$ \
    --re-ignore=/sub_expr_f? \
    --re-ignore=/version\\.py$ \
    --re-ignore=\\.csv$ \
    --re-ignore=\\.egg-info(/.*)?$ \
    --re-ignore=\\.gif$ \
    --re-ignore=\\.gitignore$ \
    --re-ignore=\\.gv$ \
    --re-ignore=\\.inv$ \
    --re-ignore=\\.json$ \
    --re-ignore=\\.pickle$ \
    --re-ignore=\\.pkl$ \
    --re-ignore=\\.png$ \
    --re-ignore=\\.root$ \
    --re-ignore=\\.svg$ \
    --re-ignore=\\.tmp$ \
    --re-ignore=\\.ya?ml$ \
    --watch=src \
    docs/ \
    docs/_build/html/
"""
executor = {group = "doc", with = "sphinx-autobuild"}
help = "Set up a server to directly preview changes to the HTML pages"

[tool.poe.tasks.docnb]
env = {EXECUTE_NB = "yes"}
help = "Build documentation and API with cached notebook execution"
sequence = ["doc"]

[tool.poe.tasks.docnb-force]
env = {FORCE_EXECUTE_NB = "yes"}
help = "Build documentation and API with notebook execution (no cache)"
sequence = ["doc"]

[tool.poe.tasks.docnblive]
env = {EXECUTE_NB = "yes"}
help = "Set up a server to directly preview changes to the HTML pages with cached notebook execution"
sequence = ["doclive"]

[tool.poe.tasks.jax]
cmd = """
pytest \
    -k 'benchmark or not benchmark' \
    -k 'not (ampform or four_momenta or numba or tensorflow or tf)' \
    --benchmark-disable \
    ${paths}
"""
executor = {extra = "jax", group = "test"}
help = "Run tests with JAX only"

[[tool.poe.tasks.jax.args]]
default = "src tests"
multiple = true
name = "paths"
positional = true

[tool.poe.tasks.lab]
args = [{name = "paths", default = "", positional = true}]
cmd = "jupyter lab ${paths}"
executor = {group = "jupyter"}
help = "Launch Jupyter Lab"

[tool.poe.tasks.linkcheck]
cmd = """
sphinx-build \
    --builder=linkcheck \
    --show-traceback \
    docs/ \
    docs/_build/linkcheck/
"""
env = {PYTHONWARNINGS = ""}
executor = {group = "doc"}
help = "Check external links in the documentation (requires internet connection)"

[tool.poe.tasks.nb]
args = [{name = "paths", default = "docs", multiple = true, positional = true}]
cmd = "pytest --nbmake --nbmake-timeout=0 ${paths}"
executor = {group = "notebooks", with = "nbmake"}
help = "Run all notebooks"

[tool.poe.tasks.style]
cmd = "pre-commit run --all-files"
executor = {group = "style"}
help = "Perform all linting, formatting, and spelling checks"

[tool.poe.tasks.test]
cmd = "pytest --benchmark-disable -m 'slow or not slow' ${paths}"
executor = {extra = ["jax", "numba", "pwa"], group = "test"}
help = "Run all unit tests"

[[tool.poe.tasks.test.args]]
default = "src tests"
multiple = true
name = "paths"
positional = true

[tool.poe.tasks.test-all]
help = "Run all tests on each supported Python version"
sequence = [
    {ref = "test-py310 ${paths}"},
    {ref = "test-py311 ${paths}"},
    {ref = "test-py312 ${paths}"},
    {ref = "test-py313 ${paths}"},
]

[[tool.poe.tasks.test-all.args]]
default = ""
multiple = true
name = "paths"
positional = true

[tool.poe.tasks.test-py310]
env = {UV_PYTHON = "3.10"}
ref = "test"

[tool.poe.tasks.test-py311]
env = {UV_PYTHON = "3.11"}
ref = "test"

[tool.poe.tasks.test-py312]
env = {UV_PYTHON = "3.12"}
ref = "test"

[tool.poe.tasks.test-py313]
env = {UV_PYTHON = "3.13"}
ref = "test"

[tool.pytest]
addopts = [
    "--color=yes",
    "--import-mode=importlib",
]
filterwarnings = [
    "error",
    "ignore: The `hash` argument is deprecated in favor of `unsafe_hash` and will be removed in or after August 2025.:DeprecationWarning",
    "ignore: `np.bool8` is a deprecated alias for `np.bool_`.*:DeprecationWarning",
    "ignore:.* is deprecated and will be removed in Pillow 10.*:DeprecationWarning",
    "ignore:.*Type google\\._upb\\..*This is deprecated.*",
    "ignore:.*Using or importing the ABCs.*:DeprecationWarning",
    "ignore:.*jax.xla_computation is deprecated*:DeprecationWarning",
    "ignore:.*the imp module is deprecated in favour of importlib.*:DeprecationWarning",
    "ignore:In the future `np.object` will be defined as the corresponding NumPy scalar\\.:FutureWarning",
    "ignore:Not saving anything, no benchmarks have been run!",
    "ignore:Passing a schema to Validator.iter_errors is deprecated.*:DeprecationWarning",
    "ignore:Please use `spmatrix` from the `scipy.sparse` namespace.*:DeprecationWarning",
    "ignore:Protobuf gencode version .*:UserWarning",
    "ignore:The distutils package is deprecated and slated for removal.*:DeprecationWarning",
    "ignore:divide by zero encountered in (true_)?divide:RuntimeWarning",
    "ignore:invalid value encountered in .*:RuntimeWarning",
    "ignore:jax\\.xla_computation is deprecated\\. Please use the AOT APIs\\.:DeprecationWarning",
    "ignore:ml_dtypes\\.float8.*:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
    "ignore:numpy.ufunc size changed, may indicate binary incompatibility.*:RuntimeWarning",
    "ignore:os\\.fork\\(\\) was called\\. os\\.fork\\(\\) is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock\\.:RuntimeWarning",
    "ignore:unclosed .*:ResourceWarning",
]
markers = ["slow: marks tests as slow (select with '-m slow')"]
minversion = "9.0"
norecursedirs = [
    ".ipynb_checkpoints",
    ".virtual_documents",
    "_build",
    "docs/api",
    "tests/output",
]
testpaths = [
    "benchmarks",
    "src",
    "tests",
]

[tool.ruff]
extend-exclude = ["typings"]
extend-include = ["*.ipynb"]
preview = true
show-fixes = true
src = [
    "src",
    "tests",
]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = [
    "ANN401",
    "C408",
    "COM812",
    "CPY001",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "D203",
    "D213",
    "D407",
    "D416",
    "DOC",
    "DTZ005",
    "E501",
    "FBT00",
    "FURB10",
    "FURB140",
    "G004",
    "ISC001",
    "PLW1514",
    "PT001",
    "PTH",
    "RUF012",
    "RUF067",
    "S307",
    "SIM108",
]
select = ["ALL"]
task-tags = ["cspell"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["display"]

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.lint.flake8-self]
ignore-names = [
    "_latex",
    "_numpycode",
    "_print",
]

[tool.ruff.lint.isort]
known-first-party = ["tensorwaves"]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "ANN",
    "ARG002",
    "B018",
    "C90",
    "D",
    "E303",
    "E402",
    "E703",
    "F404",
    "N806",
    "N816",
    "PLR09",
    "PLR2004",
    "PLW0602",
    "PLW0603",
    "S101",
    "S301",
    "S403",
    "T20",
    "TC00",
]
"*docs/usage/faster-lambdify.ipynb" = [
    "F401",
    "F821",
]
"benchmarks/*" = [
    "ANN",
    "D",
    "INP001",
    "PLC0415",
    "PLC2701",
    "PLR0913",
    "PLR0917",
    "PLR2004",
    "PLR6301",
    "S101",
    "SLF001",
    "T20",
]
"callbacks.py" = ["ARG002"]
"docs/*" = [
    "E402",
    "INP001",
    "S101",
    "S113",
    "T201",
]
"docs/conf.py" = [
    "A001",
    "D100",
    "S404",
]
"setup.py" = ["D100"]
"src/tensorwaves/function/_backend.py" = ["PLC0415"]
"src/tensorwaves/function/sympy/__init__.py" = ["PLC0415"]
"tests/*" = [
    "ANN",
    "ARG002",
    "D",
    "INP001",
    "PLC0415",
    "PLC2701",
    "PLR0913",
    "PLR0914",
    "PLR0917",
    "PLR2004",
    "PLR6301",
    "S101",
    "SLF001",
    "T20",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
allow-dunder-method-names = [
    "_repr_pretty_",
]

[tool.tomlsort]
all = false
ignore_case = true
in_place = true
sort_first = [
    "build-system",
    "project",
    "tool.setuptools",
    "tool.setuptools_scm",
]
spaces_indent_inline_array = 4
trailing_comma_inline_array = true

[[tool.ty.overrides]]
include = [
    "docs/amplitude-analysis.ipynb",
    "docs/usage.ipynb",
    "docs/usage/basics.ipynb",
    "docs/usage/binned-fit.ipynb",
]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"

[[tool.ty.overrides]]
include = [
    "docs/amplitude-analysis.ipynb",
    "docs/amplitude-analysis/analytic-continuation.ipynb",
    "docs/usage.ipynb",
    "docs/usage/caching.ipynb",
]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"

[[tool.ty.overrides]]
include = [
    "docs/amplitude-analysis.ipynb",
    "docs/usage/basics.ipynb",
    "docs/usage/binned-fit.ipynb",
]

[tool.ty.overrides.rules]
possibly-missing-attribute = "ignore"

[[tool.ty.overrides]]
include = ["docs/usage.ipynb"]

[tool.ty.overrides.rules]
invalid-method-override = "ignore"

[tool.ty.rules]
division-by-zero = "warn"
possibly-missing-import = "warn"
possibly-unresolved-reference = "warn"

[tool.ty.terminal]
error-on-warning = true

[tool.uv.sources]
ampform = {git = "https://github.com/ComPWA/ampform", rev = "fc1d4e2920954738bb6620905f0de0a73a5a93cd"}
qrules = {git = "https://github.com/ComPWA/qrules", rev = "33be556be51fff52869034327bcf6157eb6cf726"}
