[metadata]
name = tensorwaves
description = Python fitter package for multiple computational back-ends
author = Common Partial Wave Analysis
author_email = compwa-admin@ep1.rub.de
maintainer_email = compwa-admin@ep1.rub.de
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Tracker = https://github.com/ComPWA/tensorwaves/issues
    Changelog = https://github.com/ComPWA/tensorflow/releases
    Documentation = https://tensorwaves.rtfd.io
    Source = https://github.com/ComPWA/tensorwaves
license = GPLv3 or later
keywords =
    HEP
    PWA
    amplitude analysis
    partial wave analysis
    particle physics
    physics
    tensorflow
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Typing :: Typed

[options]
python_requires = >=3.6, <3.10
setup_requires =
    setuptools_scm
install_requires =
    ampform >=0.8, <0.10
    iminuit >=2.0
    numpy
    phasespace >=1.2.0
    PyYAML
    sympy
    tensorflow >=2.4, <3  # tensorflow.experimental.numpy
    tensorflow <2.7  # https://github.com/ComPWA/tensorwaves/runs/6797658528?check_suite_focus=true#step:3:64
    tqdm >=4.24.0  # autonotebook
    typing-extensions; python_version <"3.8.0"
packages = find:
package_dir =
    =src

[options.extras_require]
jax =
    jax
    jaxlib
numba =
    numba
scipy =
    scipy >=1
viz =
    graphviz
all =
    %(jax)s
    %(numba)s
    %(scipy)s
    %(viz)s
doc =
    %(all)s
    jupyter
    matplotlib
    mdit-py-plugins <0.2.7  # temporary fix
    myst-nb >=0.11  # myst_enable_extensions
    pandas
    Sphinx >=3
    Sphinx <4.4; python_version <"3.8.0"  # https://github.com/ComPWA/tensorwaves/runs/6797658345?check_suite_focus=true#step:3:74
    sphinx-book-theme
    sphinx-codeautolink[ipython]
    sphinx-copybutton
    sphinx-panels
    sphinx-thebe
    sphinx-togglebutton
    sphobjinv
test =
    %(all)s
    pytest
    pytest-cov
    pytest-mock >=3.3.0
    pytest-notebook
    pytest-profiling
    pytest-xdist
format =
    black
    isort
flake8 =
    flake8 >=4  # extend-select
    flake8-blind-except
    flake8-bugbear
    flake8-builtins
    flake8-comprehensions
    flake8-pytest-style
    flake8-rst-docstrings
    flake8-type-ignore; python_version >="3.8.0"
    flake8-use-fstring
    pep8-naming
lint =
    %(flake8)s
    mypy >=0.570  # attrs support
    pydocstyle
    pylint
sty =
    %(all)s  # type hints
    %(format)s
    %(lint)s
    %(test)s  # for pytest type hints
    pre-commit >=1.4.0
    types-docutils
    types-PyYAML
dev =
    %(all)s
    %(doc)s
    %(sty)s
    %(test)s
    aquirdturtle_collapsible_headings
    jupyterlab
    jupyterlab-code-formatter
    pip-tools >=6.1.0  # for extras_require
    sphinx-autobuild
    tox >=1.9  # for skip_install, use_develop

[options.packages.find]
where = src

[options.package_data]
tensorwaves =
    py.typed
