[metadata]
name = tensorwaves
description = Python fitter package for multiple computational back-ends
author = Common Partial Wave Analysis
author_email = compwa-admin@ep1.rub.de
maintainer_email = compwa-admin@ep1.rub.de
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Tracker = https://github.com/ComPWA/tensorwaves/issues
    Changelog = https://github.com/ComPWA/tensorwaves/releases
    Documentation = https://tensorwaves.rtfd.io
    Source = https://github.com/ComPWA/tensorwaves
license = GPLv3 or later
keywords =
    HEP
    PWA
    amplitude analysis
    partial wave analysis
    particle physics
    physics
    tensorflow
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Typing :: Typed

[options]
python_requires = >=3.7, <3.11
setup_requires =
    setuptools_scm
install_requires =
    attrs >=20.1.0  # https://www.attrs.org/en/stable/api.html#next-gen
    iminuit >=2.0
    numpy
    PyYAML >=5.1  # https://stackoverflow.com/a/55171433
    sympy >=1.9  # lambdify cse
    tqdm >=4.24.0  # autonotebook
packages = find:
package_dir =
    =src

[options.extras_require]
jax =
    jax
    jaxlib
numba =
    numba
tf =
    tensorflow >=2.4, <3  # tensorflow.experimental.numpy
tensorflow =
    %(tf)s
phsp =
    %(tensorflow)s
    phasespace[tf] >=1.7.0, <2
phasespace =
    %(phsp)s
pwa =
    %(phsp)s
    ampform >=0.12.0  # https://github.com/ComPWA/ampform/pull/177
scipy =
    scipy >=1
viz =
    graphviz
all =
    %(jax)s
    %(numba)s
    %(pwa)s
    %(scipy)s
    %(tensorflow)s
    %(viz)s
doc =
    %(all)s
    importlib-metadata; python_version <"3.8.0"
    ipympl
    jupyter
    matplotlib
    myst-nb >=0.14  # nb_ configuration prefixes
    nbclient >=0.5.5  # https://github.com/executablebooks/jupyter-book/issues/833
    pandas
    Sphinx >=3
    Sphinx <4.4; python_version <"3.8.0"  # https://github.com/ComPWA/qrules/runs/4833302679
    sphinx-book-theme
    sphinx-codeautolink[ipython]
    sphinx-comments
    sphinx-copybutton
    sphinx-design
    sphinx-thebe
    sphinx-togglebutton
    sphobjinv
test-types =
    ipython  # test _repr_pretty_
    pytest
    pytest-mock >=3.3.0
test =
    %(test-types)s
    ampform >=0.13  # https://github.com/ComPWA/ampform/issues/208
    coverage!=6.3  # https://github.com/ComPWA/tensorwaves/runs/4988761243
    nbmake <=1.3.0  # https://github.com/ComPWA/tensorwaves/runs/7298085386?check_suite_focus=true#step:3:71
    pytest-benchmark
    pytest-cov
    pytest-xdist
format =
    black
    isort
flake8 =
    flake8 >=4  # extend-select
    flake8-blind-except
    flake8-bugbear
    flake8-builtins
    flake8-comprehensions
    flake8-future-annotations
    flake8-pytest-style
    flake8-rst-docstrings
    flake8-type-ignore; python_version >="3.8.0"
    flake8-use-fstring
    markdown <3.3.6; python_version <"3.8.0"  # https://github.com/ComPWA/tensorwaves/runs/6448378225#step:3:73
    pep8-naming
mypy =
    %(jax)s
    %(pwa)s
    %(test-types)s
    mypy >=0.570  # attrs support
    types-docutils
    types-pkg-resources
    types-PyYAML
    types-requests
    types-setuptools
lint =
    %(flake8)s
    %(mypy)s
    pydocstyle
    pylint >=2.5  # good-names-rgxs
sty =
    %(format)s
    %(lint)s
    pre-commit >=1.4.0
dev =
    %(all)s
    %(doc)s
    %(sty)s
    %(test)s
    aquirdturtle-collapsible-headings
    jupyterlab
    jupyterlab-code-formatter
    jupyterlab-myst
    sphinx-autobuild
    tox >=1.9  # for skip_install, use_develop
    virtualenv <20.16; python_version <"3.8.0"  # https://github.com/ComPWA/tensorwaves/runs/7718310760?check_suite_focus=true#step:3:80

[options.packages.find]
where = src

[options.package_data]
tensorwaves =
    py.typed
